#+title: Change log for Emacs-enhanced
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for Emacs-enhanced

* Versions

** <2025-01-30>

Improved html export backend logic

- Enhanced `org-export-before-processing` to dynamically set src block filters

** <2025-01-28>

Enhance mode-line and UI customization logic

- Improve `mode-line` color handling by dynamically adjusting inactive backgrounds based on theme brightness.
- Replace `darken-color` with `adjust-color` for versatile color adjustments.
- Refactor associated faces (e.g., `hl-line`, `vertical-border`, `tab-bar`) to align with updated color logic.
- Ensure greater visual consistency across dark and light themes.

** <2025-01-27>

Improve UI, regex handling, and autosuggestion behavior

*Popup Buffer Matching:*
- Extended `my/popper-matching-buffers` to include `.*term.*` buffers for better coverage of terminal-related buffers.

*Regex Enhancements:*
- Refined italic markdown conversion:
  - Fixed edge cases involving surrounding spaces and newlines.
  - Replaced `_italic_` with `/italic/` format more reliably.

*Completion Improvements:*
- Reduced `icomplete-prospects-height` from 2 to 1 for a cleaner and less cluttered display.

*Autosuggestion Enhancements:*
- Enhanced overlay presentation in `simple-autosuggest`:
  - Properly applied text-property formatting with `:inherit shadow`.
- Fixed behavior of `simple-autosuggest-move-end-of-line`:
  - Suggestions are now accepted only when available and properly handled.
  - Prevents unnecessary movement or errors when no suggestions exist.

** <2025-01-17>

Added =capf-autosuggest= replacement and possible a replacement for =fancy-dabbrev=, it allows for inline autosuggestions in eshell, comint (inlining based on history, like capf-autosuggest) and also in-buffer using dabbrev.
